2017-01-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha06 final changes';git push
	git tag -a 4.6.4-alpha06 -m 'Version 4.6.4-alpha06 new features: cell_measures';git push --tags

	* Henry fixed invalid read in nco_cln_prs_tm() that caused ncclimo hyperslab failures on MacOS

2017-01-22  Charlie Zender  <zender@uci.edu>

	* ncclimo omit gaa_sng from regrid commands, since gaa_sng is in files to regrid

	* ncclimo daily mode fix parallelization, temporarily deprecate regridding

	* ncclimo implement daily climatology. commands look good. date hyperslab fails on MacOS.

	* ncclimo allow clm_md='dly' to read input from stdin, positional, or directory glob

	* ncsplit fix directory glob for split-mode

2017-01-20  Charlie Zender  <zender@uci.edu>

	* Implement stubs for clm_md='dly'

	* Document cell_measures and formula_terms

	* Add --cll_msr/--no_cll_msr and --frm_trm/--no_frm_trm to subsetting operators

	* ncks adds/suppresses cell_measures in regridded output with --rgr cll_msr/no_cll_msr

2017-01-19  Charlie Zender  <zender@uci.edu>

	* ncremap change standard_name of area_nm_out from cell_area to area

	* Extract variables in CF "cell_measures" attributes

	* Add areacella to in.cdl in preparation for adding CF cell_measures variables to extraction list

	* NCO 4.6.4-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha05 final changes';git push
	git tag -a 4.6.4-alpha05 -m 'Version 4.6.4-alpha05 new features: fix stdin detection, var_xtr_xtn';git push --tags

	* Rewrite stdin pipe data detection in ncclimo, ncremap
	Fixes bug running in batch mode where disconnected terminal caused scripts to expect input from stdin pipe

	* ncsplit remove lat/lon from automatic extraction for CAM (only present in regridded files)

	* ncsplit change old gnr_flg to new clm_flg so climatology-generation mode is consistent

2017-01-18  Charlie Zender  <zender@uci.edu>
