@@ -1,10 +1,14 @@
-2017-01-23  Charlie Zender  <zender@uci.edu>
+2017-01-25  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.6.4-alpha06 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha06 final changes';git push
 	git tag -a 4.6.4-alpha06 -m 'Version 4.6.4-alpha06 new features: cell_measures';git push --tags
 
-	* Henry fixed invalid read in nco_cln_prs_tm() that caused ncclimo hyperslab failures on MacOS
+	* Conclusively demonstrated that testing [ -p /dev/stdin ] leads to unexpected results on PBS not SLURM
+
+2017-01-23  Charlie Zender  <zender@uci.edu>
+
+	* Henry eliminated an invalid read in nco_cln_prs_tm() that contributed to ncclimo hyperslab failures on MacOS
 
 2017-01-22  Charlie Zender  <zender@uci.edu>
 
